cmake_minimum_required(VERSION 3.16)
project(IncubatorTestSimulator)
add_compile_definitions(_cplusplus)
if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
    add_compile_definitions(DEBUG)
endif()
add_subdirectory(IncubatorTestSimulator/IncubatorTestSimulatorLib)
add_subdirectory(IncubatorTestSimulator/IncubatorTestSimulator)