cmake_minimum_required(VERSION 3.16)
project(IncubatorTestSimulatorLib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall --pedantic-errors")
set(CMAKE_CXX_STANDARD 14)

file(GLOB_RECURSE INCUBATOR_TEST_SIMULATOR_LIB_HDRS include/*.h)
file(GLOB_RECURSE INCUBATOR_TEST_SIMULATOR_LIB_SRC_HDRS src/*.h)
file(GLOB_RECURSE INCUBATOR_TEST_SIMULATOR_LIB_SRCS src/*.cpp)


file(GLOB_RECURSE DHT11_LIB_HDRS ${CMAKE_SOURCE_DIR}/DHT11Lib/Inc/*.h)
file(GLOB_RECURSE DHT11_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/DHT11Lib/Src/*.h)
file(GLOB_RECURSE DHT11_LIB_SRCS ${CMAKE_SOURCE_DIR}/DHT11Lib/Src/*.cpp)

file(GLOB_RECURSE EEPROM24C_LIB_HDRS ${CMAKE_SOURCE_DIR}/EEPROM24CLib/Inc/*.h)
file(GLOB_RECURSE EEPROM24C_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/EEPROM24CLib/Src/*.h)
file(GLOB_RECURSE EEPROM24C_LIB_SRCS ${CMAKE_SOURCE_DIR}/EEPROM24CLib/Src/*.cpp)

file(GLOB_RECURSE INCUBATOR_LIB_HDRS ${CMAKE_SOURCE_DIR}/IncubatorLib/Inc/*.h)
file(GLOB_RECURSE INCUBATOR_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/IncubatorLib/Src/*.h)
file(GLOB_RECURSE INCUBATOR_LIB_SRCS ${CMAKE_SOURCE_DIR}/IncubatorLib/Src/*.cpp)

file(GLOB_RECURSE JOYSTICK_LIB_HDRS ${CMAKE_SOURCE_DIR}/JoystickLib/Inc/*.h)
file(GLOB_RECURSE JOYSTICK_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/JoystickLib/Src/*.h)
file(GLOB_RECURSE JOYSTICK_LIB_SRCS ${CMAKE_SOURCE_DIR}/JoystickLib/Src/*.cpp)

file(GLOB_RECURSE NTC_LIB_HDRS ${CMAKE_SOURCE_DIR}/NTCLib/Inc/*.h)
file(GLOB_RECURSE NTC_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/NTCLib/Src/*.h)
file(GLOB_RECURSE NTC_LIB_SRCS ${CMAKE_SOURCE_DIR}/NTCLib/Src/*.cpp)

file(GLOB_RECURSE TC1602_LIB_HDRS ${CMAKE_SOURCE_DIR}/TC1602Lib/Inc/*.h)
file(GLOB_RECURSE TC1602_LIB_SRC_HDRS ${CMAKE_SOURCE_DIR}/TC1602Lib/Src/*.h)
file(GLOB_RECURSE TC1602_LIB_SRCS ${CMAKE_SOURCE_DIR}/TC1602Lib/Src/*.cpp)

add_library(${PROJECT_NAME} STATIC
    ${DHT11_LIB_HDRS}
    ${DHT11_LIB_SRC_HDRS}
    ${DHT11_LIB_SRCS}
    ${EEPROM24C_LIB_HDRS}
    ${EEPROM24C_LIB_SRC_HDRS}
    ${EEPROM24C_LIB_SRCS}
    ${INCUBATOR_LIB_HDRS}
    ${INCUBATOR_LIB_SRC_HDRS}
    ${INCUBATOR_LIB_SRCS}
    ${JOYSTICK_LIB_HDRS}
    ${JOYSTICK_LIB_SRC_HDRS}
    ${JOYSTICK_LIB_SRCS}
    ${NTC_LIB_HDRS}
    ${NTC_LIB_SRC_HDRS}
    ${NTC_LIB_SRCS}
    ${TC1602_LIB_HDRS}
    ${TC1602_LIB_SRC_HDRS}
    ${TC1602_LIB_SRCS}
    ${INCUBATOR_TEST_SIMULATOR_LIB_HDRS}
    ${INCUBATOR_TEST_SIMULATOR_LIB_SRC_HDRS}
    ${INCUBATOR_TEST_SIMULATOR_LIB_SRCS}
)

find_package(SDL2 REQUIRED)
target_include_directories(${PROJECT_NAME} PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${SDL2_LIBRARIES})

find_package(SDL2_Image REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC SDL2_image)

find_package(SDL2_TTF REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC SDL2_ttf)


# I Do not want to write CMakelists in the sensors libs for the test simulator build, Libs are built with stm32CubeIDE
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/DHT11Lib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/EEPROM24CLib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/IncubatorLib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/JoystickLib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/NTCLib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/TC1602Lib/Inc)
target_include_directories(${PROJECT_NAME} PUBLIC include)

install(DIRECTORY ${CMAKE_SOURCE_DIR}/IncubatorTestSimulator/resources DESTINATION ${CMAKE_SOURCE_DIR}/IncubatorTestSimulator/bin/${CMAKE_BUILD_TYPE})
